--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "babel-cli": "^6.1.18",
     "babel-core": "^6.1.21",
-    "babel-preset-es2015": "^6.1.18"
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.3.13"
   },
   "scripts": {
     "prepublish": "make js",
@@ -36,7 +37,8 @@
   "homepage": "https://github.com/pennlabs/pcr-experiment",
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "react"
     ]
   }
 }
