--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "async": "^1.5.0",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
-    "pcr": "^0.1.1"
+    "pcr": "^0.1.1",
+    "penn-sdk": "^0.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.1.18",
